# swerve-drive-kinematics

./: .gitignore  CMakeLists.txt  README.md  cmakelists.txt  main.cpp  platformio.ini  test.cpp
.github/workflows/: cmake-multi-platform.yml
lib/SwerveKinematics/src/: robot.cpp  robot.h  swerveModule.h
src/: main.cpp  robot.cpp  robot.h  swerveModule.cpp  swerveModule.h
test/: test_robot.cpp
test/test_desktop/: test_kinematics.cpp  test_robot.cpp  test_swerveModule.cpp
tests/: robot_tests.cpp  swerveModule_tests.cpp
